@@ -92,6 +92,9 @@ fixed bugs:
   variables
 - fixed bug in heur_undercover.c, where a variable with fixed bounds but not of status SCIP_VARSTATUS_FIXED was wrongly
   handled
+- fixed bug in cons.c, where after a restart the arrays for all initial constraints were corrected in the initsol
+  process instead of the initpre process, this was to late because you might change the status in presolving which lead
+  to an assert()
 
 performance improvements:
 - fixed performance issue in debug mode, where SCIPvarGetLPSol_rec() calculated a value to often, which in the end lead
